--- a/Diseño Intefaces/tema3/Proyecto1/index.html
+++ b/Diseño Intefaces/tema3/Proyecto1/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <h1>
-            <a href="./views/proyecto1.html">Máster en CSS con Ana</a>
+            <a href="./views/proyecto1.html">Máster en CSS con Erik</a>
         </h1>
     </header>
     <!-- Fin de la cabecera -->
@@ -74,7 +74,7 @@
             </div>
 
             <div class="widget logic">
-                <h3>Aula virtual 1</h3>
+                <h3 class="red">Aula virtual 1</h3>
                 <form action="#">
                     <label for="usuarioName">Nombre de usuario</label>
                     <input type="text" id="usuarioName" name="uusarioName">
@@ -87,7 +87,7 @@
             </div>
 
             <div class="widget logic">
-                <h3>Aula virtual 2</h3>
+                <h3 class="blue">Aula virtual 2</h3>
                 <form action="#">
                     <label for="m_usuarioName">Nombre de usuario</label>
                     <input type="text" id="m_usuarioName" name="m_uusarioName">
@@ -112,8 +112,198 @@
             </div>
         </aside>
         <!-- fin barra lateral -->
+
+        <!-- inicio de secciones -->
+        <div id="sections">
+            <section class="frontend">
+                <span class="stickers">
+                    <img src="./assets/img/scotch.png" alt="pegatina izquierda" class="stickerOne">
+                    <img src="./assets/img/scotch.png" alt="pegatina derecha" class="stickerTwo">
+                </span>
+                <h2 class="titulo red">
+                    Noticias de Front-end
+                </h2>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+            </section>
+            <section class="backend">
+                <span class="stickers">
+                    <img src="./assets/img/scotch.png" alt="pegatina izquierda" class="stickerOne">
+                    <img src="./assets/img/scotch.png" alt="pegatina derecha" class="stickerTwo">
+                </span>
+                <h2 class="titulo blue">
+                    Noticias de Back-End
+                </h2>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+            </section>
+            <section class="instructor">
+                <span class="stickers">
+                    <img src="./assets/img/scotch.png" alt="pegatina izquierda" class="stickerOne">
+                    <img src="./assets/img/scotch.png" alt="pegatina derecha" class="stickerTwo">
+                </span>
+                <h2 class="titulo">
+                    Noticias de instructor
+                </h2>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+                <article class="article"><span class="icon">a</span>
+                    <p>
+                        <a href="#">
+                            Titulo de la entrada
+                        </a>
+                        Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle
+                        ustée. Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no
+                        llamarte Rodrigor.
+                    </p>
+                    <span class="date">[31-10-2024] Erik Tortajada</span>
+                </article>
+            </section>
+            <!-- fin de secciones de secciones -->
+
+        </div>
+        <!-- fin de secciones -->
+
+        <!-- otro aside mas -->
+        <aside id="frase">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quo iste veniam laborum officiis modi esse
+            quam
+            rerum quia? Et ipsam fugiat expedita voluptates odio molestias similique nobis provident repellendus?
+            <a href="#">Leer más frases</a>
+        </aside>
+        <!-- fin otro aside mas -->
+
+        <div class="clearfix"></div>
+
+        <div class="history">
+            <a href="#">Ver historico de noticias</a>
+        </div>
     </main>
     <!-- fin del main -->
+
+    <div class="clearfix"></div>
+    <!-- comienzo del footer -->
+    <footer id="footer">
+        <p>&copy; Desarrollado por Erik Tortajada WEB</p>
+        <p>
+            Más contenido y formación de desarrollo web en <a href="justdocit.vercel.app">Just Doc It</a>
+        </p>
+    </footer>
 </body>
 
 </html>
