--- a/Diseño Intefaces/tema4/index.html
+++ b/Diseño Intefaces/tema4/index.html
@@ -24,15 +24,15 @@
 </head>
 
 <body>
-    <h1>Lista de Asignaturas Erik TR 2ºDAW</h1>
+    <h1>Actividades</h1>
     <section>
         <div>
-            <h2>Diseños Figma</h2>
-            <a href="./DiseñosFigma/">Acceso</a>
+            <h2>Landing Page</h2>
+            <a href="./1_LandingPage/">Acceso</a>
         </div>
         <div>
-            <h2>Tema 2</h2>
-            <a href="./tema2/">Acceso</a>
+            <h2>Galeria de imagenes</h2>
+            <a href="./2_GaleriaDeImagenes/">Acceso</a>
         </div>
         <div>
             <h2>Tema 3</h2>
@@ -40,7 +40,7 @@
         </div>
         <div>
             <h2>Tema 4</h2>
-            <a href="./tema3/">Acceso</a>
+            <a href="./tema4/">Acceso</a>
         </div>
     </section>
 </body>
