--- a/Diseño Intefaces/tema3/ej12/index.html
+++ b/Diseño Intefaces/tema3/ej12/index.html
@@ -49,14 +49,18 @@
                 </li>
             </ul>
         </nav>
-        <a href="">Erik TR</a>
+        <a href="">
+            <img src="./image.png" alt="">
+        </a>
     </header>
 
     <main>
         <section>
-            <h1>¡Inscribete en nuestros ciclos!</h1>
-            <h2>Obten un 20% de descuento en tru primer curso</h2>
-            <button>Matricúlate Ahora</button>
+            <article>
+                <h1>¡Inscribete en nuestros ciclos!</h1>
+                <h2>Obten un 20% de descuento en tru primer curso</h2>
+                <button>Matricúlate Ahora</button>
+            </article>
         </section>
     </main>
 </body>
