--- a/Cliente/T5/DOM_2/index.html
+++ b/Cliente/T5/DOM_2/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <ul><a href="./ej1/">Ej1</a></ul>
-    <ul><a href="./ej2/">Ej2</a></ul>
-    <ul><a href="./ej3/">Ej3</a></ul>
+    <ul><a href="./ej2/">Ej2 (usa las flechas para jugar)</a></ul>
+    <ul><a href="./ej3/">Ej3 (usa las flechas para jugar)</a></ul>
 </body>
 
 </html>
