asubir tarea sergio

--- a/Cliente/T4/R1/Ej8/index.html
+++ b/Cliente/T4/R1/Ej8/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <h1>Si pones algun & cuando salgas te lo reemplazo por "and"</h1>
     <form action="#" name="myform">
         <textarea name="contenido"></textarea>
     </form>
