--- a/Cliente/T4/R1/Ej1/index.html
+++ b/Cliente/T4/R1/Ej1/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>Haz click para que te muestre una alerta con saluda</h1>
     <script src="./script.js"></script>
 </body>
 
