--- a/Cliente/T4/R1/Ej3/index.html
+++ b/Cliente/T4/R1/Ej3/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>Abre la consola para ver cuantos segundos han pasado desde que abriste la pagina</h1>
     <script src="./script.js"></script>
 </body>
 
