--- a/Cliente/T4/R1/index.html
+++ b/Cliente/T4/R1/index.html
@@ -16,6 +16,7 @@
         <li><a href="./Ej6">Ej6</a></li>
         <li><a href="./Ej7">Ej7</a></li>
         <li><a href="./Ej8">Ej8</a></li>
+        <li><a href="./Ej9yEj10/">Ej9yEj10</a></li>
     </ul>
 </body>
 
