--- a/Cliente/T4/R2/Ej1/versionA/index.html
+++ b/Cliente/T4/R2/Ej1/versionA/index.html
@@ -4,25 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Normal y Minimalista</title>
 </head>
 
 <body>
     <main>
         <header>
-            <a href="" id="normal">Tema Normal</a>
-            <a href="" id="minimalista">Tema Minimalista</a>
+            <a href="#" id="normal">Tema Normal</a>
+            <a href="#" id="minimalista">Tema Minimalista</a>
         </header>
-        <h1>Página de ejempllo</h1>
-        <p>En esta pagina vamos a comprobar o facil que es aplciar estilos mediante CSS a un documento seleccionado.</p>
-        <p>Lo ideal es que al seleccionar el estilo a este permanezca siempre igual para el usuario. Hasta ahora no
-            hemos vist como hacerlo.Se te ocurre como podemos hacerlo??</p>
+        <h1>Página de ejemplo</h1>
+        <p>En esta página vamos a comprobar lo fácil que es aplicar estilos mediante CSS a un documento seleccionado.
+        </p>
+        <p>Lo ideal es que al seleccionar el estilo este permanezca siempre igual para el usuario. Hasta ahora no
+            hemos visto cómo hacerlo. ¿Se te ocurre cómo podemos hacerlo?</p>
 
         <p>Utilizando CSS podemos incluso ocultar partes del sitio
-            <span style="display: none;">Este parrafo debe ser solo visible en el tema Normal</span>
+            <span><br><b>Este párrafo debe ser solo visible en el tema Normal</b></span>
         </p>
 
-        <p class="marco">Esto esta dentro de un marco</p>
+        <p class="marco">Esto está dentro de un marco</p>
     </main>
 
     <script src="./script.js"></script>
