--- a/Cliente/T4/R3/index.html
+++ b/Cliente/T4/R3/index.html
@@ -27,10 +27,24 @@
             cursor: pointer;
             box-shadow: 0px 0px 2px white;
         }
+
+        h1 {
+            color: white;
+            position: absolute;
+            top: 25%;
+        }
+
+        h2 {
+            color: white;
+            position: absolute;
+            top: 30%;
+        }
     </style>
 </head>
 
 <body>
+    <h1>Intentos: <span id="remainingLives">3</span></h1>
+    <h2>Choosen color: <span id="choosenColor"></span></h2>
     <section id="board"></section>
     <script src="./script.js"></script>
 </body>
