ejercicio adivinar color rgb

--- a/Cliente/T4/R3/index.html
+++ b/Cliente/T4/R3/index.html
@@ -31,13 +31,20 @@
         h1 {
             color: white;
             position: absolute;
-            top: 25%;
+            top: 10%;
         }
 
         h2 {
             color: white;
             position: absolute;
-            top: 30%;
+            top: 15%;
+        }
+
+        h3 {
+            font-size: xx-large;
+            color: white;
+            position: absolute;
+            top: 75%;
         }
     </style>
 </head>
@@ -46,6 +53,7 @@
     <h1>Intentos: <span id="remainingLives">3</span></h1>
     <h2>Choosen color: <span id="choosenColor"></span></h2>
     <section id="board"></section>
+    <h3 id="messageResult"></h3>
     <script src="./script.js"></script>
 </body>
 
