un poquico de todo

--- a/Diseno_Interfaces/tema7/Proyecto1-Tema7/comencemos.html
+++ b/Diseno_Interfaces/tema7/Proyecto1-Tema7/comencemos.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-lg-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                        <a class="nav-link " href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="./sitios.html" role="button" data-bs-toggle="dropdown"
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="./clientes.html">Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./comencemos.html">Comencemos</a>
+                        <a class="nav-link active" aria-current="page" href="./comencemos.html">Comencemos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contactos.html">¿Interesado?</a>
@@ -61,7 +61,112 @@
 
     <!-- ? MAIN -->
     <main class="pt-5">
-        <h1>Sección comencemos</h1>
+        <header class="container text-center d-grid gap-3">
+            <h1>Comencemos tu nuevo proyecto</h1>
+            <h2 class="fs-4">Me encanta la colaboracaión mutua entre <b>profesional-cliente</b>, prefiero la frase: </h2>
+            <h3><b>"Trabajo contigo"</b></h3>
+            <h4 class="fs-5">En vez de <b>Trabajo para ti</b></h4>
+        </header>
+        <div class="subtitle px-5">
+            <p>Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle ustée.
+                Amatomaa jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no llamarte
+                Rodrigor.</p>
+
+            <p>Va usté muy cargadoo al ataquerl diodeno no puedor a wan no te digo trigo por no llamarte Rodrigor te voy
+                a borrar el cerito la caidita caballo blanco caballo negroorl de la pradera a peich. Pecador torpedo
+                sexuarl te voy a borrar el cerito.</p>
+        </div>
+
+        <div class="container">
+            <div class="row gap-lg-5">
+                <!-- FIRST -->
+                <div class="row">
+                    <article class="col-12 col-lg-6  d-flex flex-column justify-content-center">
+                        <h2>Paso 1</h2>
+                        <h3>Concepto y Presupuesto</h3>
+                        <p class="fs-5">
+                            Un sitio hermoso, moderno, responsivo y personalizado para tu compañía, negocio, marca,
+                            servicio
+                            o producto.
+                        </p>
+                    </article>
+                    <article class="col-12 col-lg-6 order-lg-1">
+                        <img class="img-fluid w-75" src="./assets/img/workflow-step-1.png"
+                            alt="¿Necesitas un increíble sitio web?" title="¿Necesitas un increíble sitio web?">
+                    </article>
+                </div>
+
+                <!-- SECOND -->
+                <div class="row">
+                    <article class="col-12 col-lg-6 order-lg-2 d-flex flex-column justify-content-center">
+                        <h2>Paso 2</h2>
+                        <h3>Propuesta de Diseño</h3>
+                        <p class="fs-5">
+                            Es importante proporcionar a tus visitantes una experiencia web óptima en dispositivos
+                            móviles.
+                            El diseño responsivo significa que tu sitio se adapta instantáneamente al dispositivo que el
+                            visitante utiliza. ¡Mi trabajo es hacer que la visita d tus usuarios sea lo más agradable e
+                            intuitiva para ellos!
+                        </p>
+                    </article>
+                    <article class="col-12 col-lg-6 order-lg-1">
+                        <img class="img-fluid w-75" src="./assets/img/workflow-step-2.png" alt="Sitios web responsivos">
+                    </article>
+                </div>
+
+                <!-- THIRD -->
+                <div class="row">
+                    <article class="col-12 col-lg-6  d-flex flex-column justify-content-center">
+                        <h2>Paso 3</h2>
+                        <h3>Retroalimentación</h3>
+                        <p class="fs-5">
+                            Un sitio hermoso, moderno, responsivo y personalizado para tu compañía, negocio, marca,
+                            servicio
+                            o producto.
+                        </p>
+                    </article>
+                    <article class="col-12 col-lg-6 order-lg-1">
+                        <img class="img-fluid w-75" src="./assets/img/workflow-step-3.png"
+                            alt="¿Necesitas un increíble sitio web?" title="¿Necesitas un increíble sitio web?">
+                    </article>
+                </div>
+
+                <!-- FOURTH -->
+                <div class="row">
+                    <article class="col-12 col-lg-6 order-lg-2 d-flex flex-column justify-content-center">
+                        <h2>Paso 4</h2>
+                        <h3>Acabado de Diseño y Contenido</h3>
+                        <p class="fs-5">
+                            Es importante proporcionar a tus visitantes una experiencia web óptima en dispositivos
+                            móviles.
+                            El diseño responsivo significa que tu sitio se adapta instantáneamente al dispositivo que el
+                            visitante utiliza. ¡Mi trabajo es hacer que la visita d tus usuarios sea lo más agradable e
+                            intuitiva para ellos!
+                        </p>
+                    </article>
+                    <article class="col-12 col-lg-6 order-lg-1">
+                        <img class="img-fluid w-75" src="./assets/img/workflow-step-4.png" alt="Sitios web responsivos">
+                    </article>
+                </div>
+
+                <!-- FIFTH -->
+                <div class="row d-flex justify-content-around ">
+                    <article class="col-12 col-lg-6 d-flex flex-column justify-content-center">
+                        <h2>Paso 5</h2>
+                        <h3>Fin del Proyecto</h3>
+                        <p class="fs-5">
+                            Un sitio hermoso, moderno, responsivo y personalizado para tu compañía, negocio, marca,
+                            servicio
+                            o producto.
+                        </p>
+                    </article>
+                    <article class="col-12 col-lg-6 order-lg-1 ">
+                        <img class="img-fluid w-75" src="./assets/img/workflow-step-5.png"
+                            alt="¿Necesitas un increíble sitio web?" title="¿Necesitas un increíble sitio web?">
+                    </article>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- ? FIN MAIN -->
 
