--- a/Diseno_Interfaces/tema7/Proyecto1-Tema7/contactos.html
+++ b/Diseno_Interfaces/tema7/Proyecto1-Tema7/contactos.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-lg-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                        <a class="nav-link " href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="./sitios.html" role="button" data-bs-toggle="dropdown"
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="./comencemos.html">Comencemos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contactos.html">¿Interesado?</a>
+                        <a class="nav-link active" aria-current="page" href="./contactos.html">¿Interesado?</a>
                     </li>
                 </ul>
             </div>
@@ -60,8 +60,94 @@
 
 
     <!-- ? MAIN -->
-    <main class="pt-5">
-        <h1>Sección contactos</h1>
+    <main class="pt-5 bg-color">
+        <div class="container mb-4">
+            <div class="row">
+                <!-- FIRST -->
+                <article class="col-12 text-center">
+                    <h1>Interesad@?</h1>
+                    <p class="fs-5">!Envíame tus comentarios¡</p>
+                    <p class="fs-5">Para más información, puedes contactarme en <a
+                            href="mailto:eriktortarod@gmail.com">eriktortarod@gmail.com</a></p>
+
+
+                </article>
+
+                <!-- SECOND -->
+                <article class="col-12 col-lg-6 order-lg-1 bg-">
+                    <form action="">
+                        <div class="mb-4">
+                            <label class="form-label" for="name">Nombre: </label>
+                            <input class="form-control" type="text" name="name" id="name"
+                                placeholder="Inserta tu nombre" required>
+                        </div>
+
+                        <div class="mb-4">
+                            <label class="form-label" for="email">Email: </label>
+                            <input class="form-control" type="email" name="email" id="email"
+                                placeholder="Inserta tu email" required>
+                        </div>
+
+                        <div class="mb-4">
+                            <label class="form-label" for="comments">Comentario: </label>
+                            <textarea class="form-control" name="comments" id="comments" cols="30" rows="6"
+                                placeholder="Inserta tu comentario"></textarea>
+                        </div>
+
+                        <input type="submit" class="btn btn-success btn-lg" value="Enviar">
+                    </form>
+                </article>
+
+                <!-- THIRD -->
+                <article class="col-12 col-lg-6">
+                    <div class="ratio ratio-16x9">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7846001.411196521!2d-68.84719391703412!3d-16.217592575825247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915edf8977bba295%3A0x1c9ec2bb0115edbf!2sBolivia!5e0!3m2!1ses!2ses!4v1738568914500!5m2!1ses!2ses"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </article>
+            </div>
+        </div>
+
+        <!-- CARROUSEL -->
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-inner position-relative">
+                <div class="carousel-item active">
+                    <img src="./assets/img/about-1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption bg-second-alpha-color ">
+                        <article>
+                            <p class="fs-4">Erik Tortajada</p>
+                            <p class="fs-5">Desarrollador Web</p>
+                            <aside class="d-none d-lg-block">
+                                <p>Comencé a crear sitios y aplicaciones en <b>2023</b></p>
+                                <p>Valoro mucho el concepto de <em><b>"menos es más"</b></em></p>
+                                <p>Trabajo de forma remota o independiente</p>
+                            </aside>
+                        </article>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/about-2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/about-3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/about-4.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </main>
     <!-- ? FIN MAIN -->
 
