--- a/Diseno_Interfaces/tema7/ProyectoBootstrap/index.html
+++ b/Diseno_Interfaces/tema7/ProyectoBootstrap/index.html
@@ -1,95 +1,212 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Red Social</title>
 
-   <link rel="stylesheet" href="./css/bootstrap.css">
+   <!-- BOOTSTRAP -->
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
-   <link rel="stylesheet" href="./css/styles.css">
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css">
 
-   <title>Red social</title>
+   <!-- MY STYLES -->
+   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-   <!-- HEADER -->
-   <header class="bg-dark py-2">
-      <div class="mx-4">
-         <div class="d-flex justify-content-between align-items-center">
-            <div class="d-flex align-items-center">
-               <i class="bi bi-bootstrap-fill text-white fs-2"></i>
-               <input type="search" class="form-control ms-2" placeholder="Search">
+   <!-- Navbar -->
+   <nav class="navbar navbar-dark py-2 fixed-top">
+      <div class="container-fluid ">
+         <!-- Left section -->
+         <div class="d-flex align-items-center">
+            <div class="fs-4 text-white me-2"><i class="bi bi-bootstrap-fill fs-1"></i></div>
+            <input type="search" class="form-control m-2 rounded-pill bg-dark-subtle text-white d-none d-md-block"
+               placeholder="Buscar">
+         </div>
+
+         <!-- Center section -->
+         <div class="d-flex justify-content-center flex-grow-1 order-1 order-lg-0">
+            <div class="nav">
+               <a class="nav-link active px-4"><i class="bi bi-house-door-fill fs-4"></i></a>
+               <a class="nav-link px-4"><i class="bi bi-flag fs-4"></i></a>
+               <a class="nav-link px-4"><i class="bi bi-play-btn fs-4"></i></a>
+               <a class="nav-link px-4"><i class="bi bi-shop fs-4"></i></a>
+               <a class="nav-link px-4"><i class="bi bi-people fs-4"></i></a>
             </div>
-            <div class="d-flex justify-content-center">
-               <i class="bi bi-house text-white mx-2 fs-4"></i>
-               <i class="bi bi-flag text-white mx-2 fs-4"></i>
-               <i class="bi bi-youtube text-white mx-2 fs-4"></i>
-               <i class="bi bi-shop text-white mx-2 fs-4"></i>
-               <i class="bi bi-people text-white mx-2 fs-4"></i>
+         </div>
+
+         <!-- Right section -->
+         <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center me-2">
+               <img src="./img/persona3.jpg" class="rounded-circle" width="32" height="32">
+               <span class="text-white ms-2">Ana</span>
             </div>
-            <div class="d-flex align-items-center justify-content-end">
-               <figure class="d-flex align-items-center mb-0">
-                  <img src="./img/paisaje1.jpg" alt="" class="rounded-circle ms-2" width="25" height="25">
-                  <h2 class="text-white ms-2 mb-0 fs-6">Erik</h2>
-               </figure>
-               <i class="bi bi-gear text-white mx-2 fs-4"></i>
-               <i class="bi bi-chat text-white mx-2 fs-4"></i>
-               <i class="bi bi-bell text-white mx-2 fs-4"></i>
+            <a
+               class="nav-link p-2 bg-dark-not-subtle rounded-circle text-white d-flex justify-content-center align-items-center small-circle">
+               <i class="bi bi-grid-3x3-gap-fill fs-5"></i>
+            </a>
+            <a
+               class="nav-link p-2 bg-dark-not-subtle rounded-circle text-white d-flex justify-content-center align-items-center small-circle">
+               <i class="bi bi-messenger fs-5"></i>
+            </a>
+            <a
+               class=" nav-link p-2 bg-dark-not-subtle rounded-circle  text-white d-flex justify-content-center align-items-center small-circle">
+               <i class="bi bi-bell-fill fs-5"></i>
+            </a>
+         </div>
+
+
+      </div>
+   </nav>
+
+   <!-- Main content -->
+   <div class="container-fluid mt-5 pt-lg-3 pt-5">
+      <div class="row position-relative">
+         <!-- Left sidebar -->
+         <div class="col-3 sidebar pt-3 px-4 d-none d-md-block mt-md-4">
+            <div class="nav flex-column">
+               <a class="nav-link d-flex align-items-center py-2">
+                  <img src="./img/persona3.jpg" class="rounded-circle me-2" width="36" height="36">
+                  <span>Ana Fuentes</span>
+               </a>
+               <a class="nav-link d-flex align-items-center py-2">
+                  <i class="bi bi-people-fill fs-5 me-2"></i>
+                  <span>Amigos</span>
+               </a>
+               <a class="nav-link d-flex align-items-center py-2">
+                  <i class="bi bi-flag-fill fs-5 me-2"></i>
+                  <span>Páginas</span>
+               </a>
+               <a class="nav-link d-flex align-items-center py-2">
+                  <i class="bi bi-people-fill fs-5 me-2"></i>
+                  <span>Grupos</span>
+               </a>
+               <a class="nav-link d-flex align-items-center py-2">
+                  <i class="bi bi-bag-check-fill fs-5 me-2"></i>
+                  <span>Marketplace</span>
+               </a>
+               <a class="nav-link d-flex align-items-center py-2">
+                  <i class="bi bi-play-btn-fill fs-5 me-2"></i>
+                  <span>Watch</span>
+               </a>
+               <a class="nav-link d-flex align-items-center py-2">
+                  <i class="bi bi-calendar-event-fill fs-5 me-2"></i>
+                  <span>Eventos</span>
+               </a>
+            </div>
+            <div class="mt-3 px-3">
+               <p class="m-0">
+                  <span><a href="" class="text-secondary text-decoration-none">Privacidad</a></span>
+                  <span><a href="" class="text-secondary text-decoration-none">Condiciones</a></span>
+               </p>
+               <p class="m-0">
+                  <span><a href="" class="text-secondary text-decoration-none">Publicacidad</a></span>
+                  <span><a href="" class="text-secondary text-decoration-none">Opciones de anuncios</a></span>
+               </p>
+               <p class="m-0">
+                  <span><a href="" class="text-secondary text-decoration-none">Cookies</a></span>
+                  <span><a href="" class="text-secondary text-decoration-none">Más</a></span>
+               </p>
+            </div>
+         </div>
+
+         <!-- Center content -->
+         <div class="col-12 col-md-6 col-lg-5 px-lg main-content pt-4 px-3 px-md-4 pt-md-5 pt-lg-4">
+            <!-- Create post -->
+            <div class="content-box rounded p-3 mb-3">
+               <div class="d-flex align-items-center mb-3">
+                  <img src="./img/persona3.jpg" class="rounded-circle me-2" width="40" height="40">
+                  <input type="text" class="form-control rounded-pill bg-dark-subtle text-white"
+                     placeholder="¿Qué estás pensando, Ana?">
+               </div>
+               <div class="d-flex justify-content-between border-top pt-3">
+                  <button class="btn text-white"><i class="bi bi-camera-video me-2"></i>Video</button>
+                  <button class="btn text-white"><i class="bi bi-images me-2"></i>Foto</button>
+                  <button class="btn text-white"><i class="bi bi-emoji-smile me-2"></i>Sentimiento</button>
+               </div>
+            </div>
+
+            <!-- Post example -->
+            <div class="content-box rounded p-3 mb-3">
+               <div class="d-flex align-items-center mb-3">
+                  <img src="./img/persona5.jpg" class="rounded-circle me-2" width="40" height="40">
+                  <div>
+                     <h6 class="mb-0 text-white">Stephanie Doe</h6>
+                     <small class="text-white">1hr</small>
+                  </div>
+               </div>
+               <p class="text-white">Lorem ipsum dolor sit amet.</p>
+               <img src="./img/ad3.jpg" class="img-fluid w-100 rounded mb-3">
+               <div class="d-flex justify-content-between text-white">
+                  <span><i class="bi bi-heart-fill text-danger me-1"></i>60</span>
+                  <span>7 comentarios</span>
+               </div>
+               <div class="d-flex text-white justify-content-around mt-3">
+                  <div class="d-flex align-items-center gap-2"><i class="bi bi-hand-thumbs-up align-middle"></i><span
+                        class="align-middle">Me gusta</span></div>
+                  <div class="d-flex align-items-center gap-2"><i class="bi bi-chat-left align-middle"></i><span
+                        class="align-middle">Comentarios</span></div>
+               </div>
+            </div>
+            <div class="content-box rounded p-3 mb-3">
+               <div class="d-flex align-items-center mb-3">
+                  <img src="./img/persona4.jpg" class="rounded-circle me-2" width="40" height="40">
+                  <div>
+                     <h6 class="mb-0 text-white">Cesar Doe</h6>
+                     <small class="text-white">2hr</small>
+                  </div>
+               </div>
+               <p class="text-white">Lorem ipsum dolor sit amet.</p>
+               <img src="./img/ad2.jpg" class="img-fluid w-100 rounded mb-3">
+               <div class="d-flex justify-content-between text-white">
+                  <span><i class="bi bi-heart-fill text-danger me-1"></i>60</span>
+                  <span>7 comentarios</span>
+               </div>
+               <div class="d-flex text-white justify-content-around mt-3">
+                  <div class="d-flex align-items-center gap-2"><i class="bi bi-hand-thumbs-up align-middle"></i><span
+                        class="align-middle">Me gusta</span></div>
+                  <div class="d-flex align-items-center gap-2"><i class="bi bi-chat-left align-middle"></i><span
+                        class="align-middle">Comentarios</span></div>
+               </div>
+            </div>
+         </div>
+
+         <!-- Right sidebar -->
+         <div class="col-3 right-sidebar pt-3 px-4 d-none d-md-block mt-md-3 mt-lg-0">
+            <div class="rounded p-3 mb-3">
+               <h6 class="text-white mb-3 fw-bold">Publicidad</h6>
+               <img src="./img/ad1.jpg" class="img-fluid rounded mb-3">
+               <img src="./img/ad2.jpg" class="img-fluid rounded">
+            </div>
+
+            <div class="rounded p-3">
+               <h6 class="text-white mb-3 fw-bold">Contactos</h6>
+               <div class="nav flex-column">
+                  <a class="nav-link d-flex align-items-center py-2">
+                     <img src="./img/persona2.jpg" class="rounded-circle me-2" width="32" height="32">
+                     <span>Alejandro Doe</span>
+                  </a>
+                  <a class="nav-link d-flex align-items-center py-2">
+                     <img src="./img/persona3.jpg" class="rounded-circle me-2" width="32" height="32">
+                     <span>Stephanie Doe</span>
+                  </a>
+                  <a class="nav-link d-flex align-items-center py-2">
+                     <img src="./img/persona4.jpg" class="rounded-circle me-2" width="32" height="32">
+                     <span>Cesar Doe</span>
+                  </a>
+                  <a class="nav-link d-flex align-items-center py-2">
+                     <img src="./img/persona5.jpg" class="rounded-circle me-2" width="32" height="32">
+                     <span>Manuel Doe</span>
+                  </a>
+               </div>
             </div>
          </div>
       </div>
-   </header>
+   </div>
 
-   <main class="d-flex justify-content-between">
-      <aside>
-         <ul class="list-group list-group-flush">
-            <li class="list-group-item d-flex align-items-center gap-2">
-               <img src="./img/paisaje1.jpg" alt="" class="rounded-circle" width="25" height="25">
-               <h2 class="mb-0 fs-6 ">Erik Tortajada</h2>
-            </li>
-            <li class="list-group-item d-flex align-items-center gap-2">
-               <img src="./img/paisaje1.jpg" alt="" class="rounded-circle" width="25" height="25">
-               <h2 class="mb-0 fs-6 ">Amigos</h2>
-            </li>
-            <li class="list-group-item d-flex align-items-center gap-2">
-               <img src="./img/paisaje1.jpg" alt="" class="rounded-circle" width="25" height="25">
-               <h2 class="mb-0 fs-6 ">Páginas</h2>
-            </li>
-            <li class="list-group-item d-flex align-items-center gap-2">
-               <img src="./img/paisaje1.jpg" alt="" class="rounded-circle" width="25" height="25">
-               <h2 class="mb-0 fs-6 ">Grupos</h2>
-            </li>
-            <li class="list-group-item d-flex align-items-center gap-2">
-               <img src="./img/paisaje1.jpg" alt="" class="rounded-circle" width="25" height="25">
-               <h2 class="mb-0 fs-6 ">Marketplace</h2>
-            </li>
-            <li class="list-group-item d-flex align-items-center gap-2">
-               <img src="./img/paisaje1.jpg" alt="" class="rounded-circle" width="25" height="25">
-               <h2 class="mb-0 fs-6 ">Watch</h2>
-            </li>
-            <li class="list-group-item d-flex align-items-center gap-2">
-               <img src="./img/paisaje1.jpg" alt="" class="rounded-circle" width="25" height="25">
-               <h2 class="mb-0 fs-6 ">Eventos</h2>
-            </li>
-         </ul>
-      </aside>
-      <section>
-         <h1>Tu vas por el centro</h1>
-      </section>
-      <aside>
-         <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A fourth item</li>
-            <li class="list-group-item">And a fifth one</li>
-         </ul>
-      </aside>
-   </main>
-
-   <script src="./js/bootstrap.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
